2007-05-13  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/pango-spec.scm (initialize): 
	* gnome/Makefile.am: 
	* gnome/overrides/pango.defs: 
	* gnome/gw/Makefile.am: Add overrides for pango 1.14. PangoGlyph
	is a uint32, not an unsigned long.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/pango-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* glib-checks.ac: Check for a versioned glib.
	* defs-checks.ac: Check for a versioned defs.

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.

2004-09-19  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (libgw_guile_gnome_pango_la_LIBADD): Not
	G_WRAP_LINK_ARGS, it's G_WRAP_LIBS.

2004-09-16  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (SUBDIRS): Dist fixes.

	* README: Added.

	* NEWS: Added.

	* AUTHORS: Added.

2004-09-12  Andy Wingo  <wingo@pobox.com>

	* gnome/pango.scm (gnome): Added.

	* gnome/Makefile.am: Dist (gnome pango).

2004-09-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am: Don't dist the gw C files.

	* defs-checks.ac: Added.

	* glib-checks.ac: Updated.

	* gnome/gw/pango-spec.scm: Adapted for module name changes.

2004-06-24  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/pango-spec.scm: Adapt for G-Wrap "depends-on!" API change.

	* ChangeLog: Old ChangeLogs have been removed, as no entries