@@ -1,0 +1,4 @@
+PKG_CHECK_MODULES(GUILE_CAIRO, guile-gnome-cairo >= 2.15.91, HAVE_CAIRO=true, HAVE_CAIRO=false)
+AC_SUBST(GUILE_CAIRO_CFLAGS)
+AC_SUBST(GUILE_CAIRO_LIBS)
+AM_CONDITIONAL(HAVE_CAIRO, $HAVE_CAIRO)
